// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiText is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiText testClass1 testClass2 css-h22ihx-euiText-m"
  data-test-subj="test subject string"
>
  <p>
    Content
  </p>
</div>
`;

exports[`EuiText props cloneElement 1`] = `
<p
  aria-label="aria-label"
  class="euiText testClass1 testClass2 css-1ovgvj3-euiText-m"
  data-test-subj="test subject string"
>
  Content
</p>
`;

exports[`EuiText props color & align 1`] = `
<div
  aria-label="aria-label"
  class="css-nev8dh-euiText-m-euiTextColor-danger-euiTextAlign-center"
  data-test-subj="test subject string"
>
  <p>
    Content
  </p>
</div>
`;

exports[`EuiText props grow false 1`] = `
<div
  aria-label="aria-label"
  class="euiText testClass1 testClass2 css-1cv67ws-euiText-constrainedWidth-m"
  data-test-subj="test subject string"
>
  <p>
    Content
  </p>
</div>
`;
